<resources>
    <string name="app_name">GitHub Journey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="empty_login_password">Empty login or/and password</string>
    <string name="login_failed">Login failed</string>
    <string name="url_connect" translatable="false">https://api.github.com/authorizations</string>
    <string name="url_disconnect" translatable="false">https://api.github.com/authorizations/%1$s</string>
    <string name="url_feeds" translatable="false">https://api.github.com/feeds?page=%1$d</string>
    <string name="url_repos" translatable="false">https://api.github.com/user/repos?page=%1$d</string>
    <string name="url_followers" translatable="false">https://api.github.com/user/followers?page=%1$d</string>
    <string name="url_following" translatable="false">https://api.github.com/user/following?page=%1$d</string>
    <string name="url_starred" translatable="false">https://api.github.com/user/starred?page=%1$d</string>
    <string name="url_events" translatable="false">https://api.github.com/users/%2$s/events?page=%1$d</string>
    <string name="url_login_data" translatable="false">https://api.github.com/user</string>
    <string name="url_users" translatable="false">https://api.github.com/users/%1$s</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="contribution_description">%1$s, full path: %2$s</string>
    <string name="user_session_data" translatable="false">userSessionData</string>
    <string name="screenshot_msg_title">User contributions activity screenshot</string>
    <string name="screenshot_msg_extra_text">This is a contributions activity screenshot mail from GitHubJourney app</string>
    <string name="screenshot_msg_desc">Send mail...</string>
    <string name="local_path" translatable="false">Pictures/screenshot.png</string>
    <string name="content_type" translatable="false">image/png</string>
    <string name="content_path" translatable="false">file://</string>
    <string name="feed">Feed</string>
    <string name="repositories">Repositories</string>
    <string name="stars">Stars</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="map">Map</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid location string</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="pref_header_general">General</string>
    <string name="pref_system_timezone">Enable system timezone</string>
    <string name="pref_description_system_timezone">TimeZone settings
        based on your system preferences or manual setup
    </string>
    <string name="pref_title_display_map">Display Map</string>
    <string name="pref_description_display_map">Display following/followers contacts on Google Map</string>
    <string name="pref_title_add_timezone">Change TimeZone</string>
    <string name="appwidget_title">Todays feed list</string>
    <string name="appwidget_time">Date</string>
    <string name="appwidget_title_empty">Your feed list is empty</string>
</resources>